--- a/cources/Javascript/jsamazona/frontend/src/index.html
+++ b/cources/Javascript/jsamazona/frontend/src/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>JS Amazona</title>
+  <script type="module" src="app.js"></script>
 </head>
 
 <body>
@@ -20,27 +21,7 @@
         <a href="/#/cart">Cart</a>
       </div>
     </header>
-    <main>
-      <ul class="products">
-        <li>
-          <div class="product">
-            <a href="/#/product/1">
-              <img src="/images/product-1.jpg" alt="product 1">
-            </a>
-            <div class="product-name">
-              <a href="/#/product/1">
-                Fit Slim Shirt
-              </a>
-            </div>
-            <div class="product-brand">
-              Nike
-            </div>
-            <div class="product-price">
-              $59
-            </div>
-          </div>
-        </li>
-      </ul>
+    <main id="main-container">
     </main>
     <footer>
       All rights reserver @2022
