added backend node server, babel and webpack

--- a/cources/Javascript/jsamazona/frontend/index.html
+++ b/cources/Javascript/jsamazona/frontend/index.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>JS Amazona</title>
-  <script type="module" src="app.js"></script>
 </head>
 
 <body>
@@ -27,6 +26,7 @@
       All rights reserver @2022
     </footer>
   </div>
+  <script src="main.js"></script>
 </body>
 
 </html>
