--- a/cources/Javascript/jsamazona/frontend/index.html
+++ b/cources/Javascript/jsamazona/frontend/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.css" />
+  <link rel="stylesheet" href="style.css" />
   <title>JS Amazona</title>
 </head>
 
